--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     </head>
     <body>
         <div id="app">
-            <p>Name: {{ name }} is from: {{ place }}</p>
+            <p>{{ name }} is from {{ place }}</p>
             <p><input v-model="place"/></p>
-            <p @click="changeName()">change name</p>
         </div>
         <script>
             const app = new Vue({
@@ -16,12 +15,6 @@
                 data: {
                     name: 'janko hrasko',
                     place: 'hraskovo'
-                },
-                methods: {
-                    changeName() {
-                        this.name = 'ferdo mravec';
-                        this.place = 'mravenisko';
-                    }
                 }
             });
         </script>
