--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
         <div id="app">
             <p>{{ name }} is from {{ place }}</p>
             <p><input v-model="place"/></p>
+            <ul>
+                <li v-for="item in items">
+                    id: {{ item.id }} / color: {{ item.color }}
+                    <span  v-if="item.color==='red'"> warm color </span>
+                    <span  v-else> cold color </span>
+                </li>
+            </ul>
         </div>
         <script>
             const app = new Vue({
                 el:'#app',
                 data: {
                     name: 'janko hrasko',
-                    place: 'hraskovo'
+                    place: 'hraskovo',
+                    items: [
+                        { id: '123', color: 'red' },
+                        { id: '666', color: 'blue' },
+                        { id: '777', color: 'white' }
+                    ]
                 }
             });
         </script>
