--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>Vue-simple</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.6/vue.js"></script>
+        <style>
+            .warm { background: lightcoral; }
+            .cold { background: lightblue; }
+        </style>
     </head>
     <body>
         <div id="app">
@@ -11,8 +15,10 @@
             <ul>
                 <li v-for="item in items">
                     id: {{ item.id }} / color: {{ item.color }}
-                    <span  v-if="item.color==='red'"> warm color </span>
-                    <span  v-else> cold color </span>
+                    <span  v-if="item.color==='red'"
+                           v-bind:class="{ warm: item.color==='red' }"> warm color </span>
+                    <span  v-else 
+                           v-bind:class="{ cold: item.color!=='red' }"> cold color </span>
                 </li>
             </ul>
         </div>
