--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="app">
-            <p>{{ name }} is from small {{ place }}</p>
+            <p>big {{ name }} is from small {{ place }}</p>
         </div>
         <script>
             const app = new Vue({
